--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-{% load staticfiles %} <!-- New line -->
-<html>
-<head>
-<title>Rango</title>
-</head>
-<body>
-<h1>This tutorial has been put together by Frederik</h1>
-<div>
-hey<br />
-<strong>{{ boldmessage }}</strong><br />
-</div>
-<div>
-<a href="/rango/">Index</a><br />
-<img src="{% static "images/rango.jpg" %}"
-alt="Picture of Rango" /> <!-- New line -->
-<img /> cat <img src="{{ MEDIA_URL}}cat.jpg">
-</div>
-</body>
-</html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+	About
+{% endblock %}
+	
+{% block body_block %}
+	<h1>Rango says...</h1>
+	<p>{{ about_text }}</p>
+	<p>visits: {{ visits }}</p>
+	<br />
+	<img src="{{ MEDIA_URL }}cat.jpg" alt="A picture of a cat." />
+	<img src="{% static "images/rango.jpg" %}" />
+{% endblock %}
