--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,28 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Rango - Add A Page</title>
-</head>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<body>
-{% if category %}
-<h1>Add a Page to {{category.name}</h1>
+{% block title_block %}
+	Add a Page
+{% endblock %}
 
-<form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
-{% csrf_token %}
-{% for hidden in form.hidden_fields %}
-{{ hidden }}
-{% endfor %}
-{% for field in form.visible_fields %}
-{{ field.errors }}
-{{ field.help_text }}
-{{ field }}
-{% endfor %}
-<input type="submit" name="submit" value="Add Page" />
-</form>
-{% else %}
-	A category by this name does not exist
-{% endif %}
-
-</body>
-</html>
+{% block body_block %}
+	<h1>Add a Page</h1>
+	<div>
+		<form id="page_form" method="post" action="{% url 'add_page' category.slug %}">
+			{% csrf_token %}
+			{% for hidden in form.hidden_fields %}
+				{{ hidden }}
+			{% endfor %}
+			{% for field in form.visible_fields %}
+				{{ field.errors }}
+				{{ field.help_text }}
+				{{ field }}
+			{% endfor %}
+			<input type="submit" name="submit" value="Add a page" />
+		</form>
+	</div>
+{% endblock %}
