--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,31 +1,26 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango - Category</title>
-    </head>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-    <body>
-        <h1>{{ category.name }}</h1>
-		<div>
-        {% if category %}
-            {% if pages %}
-            <ul>
-                {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
-            </ul>
-            {% else %}
-                <strong>No pages currently in category.</strong>
-            {% endif %}
-        {% else %}
-            The specified category does not exist!
-        {% endif %}
-	</div>
-	<div>
-		{% if category %}
-			<a href="/rango/category/{{category.slug}}/add_page/">Add Page</a> <br/>
+{% block title_block %}
+	{{ category.name }}
+{% endblock %}
+
+{% block body_block %}
+	{% if category %}
+		<h1>{{ category.name }}</h1>
+		{% if pages %}
+			<ul>
+			{% for page in pages %}
+				<li><a href="{{ page.url }}">{{ page.title }}</a></li>
+			{% endfor %}
+			</ul>
+		{% else %}
+			<strong>No pages currently in category.</strong>
 		{% endif %}
-		<a href="/rango/">Index</a><br />
-	</div>
-    </body>
-</html>
+		{% if user.is_authenticated %}
+			<a href="{% url 'add_page' category.slug %}">Add Page</a> <br/>
+		{% endif %}
+	{% else %}
+		The specified category does not exist!
+	{% endif %}
+{% endblock %}
