--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-<head>
-<title>Rango</title>
-</head>
-<body>
+{% block body_block %}
 <h1>Rango says...</h1>
 <div>
-hey there partner!
+	{% if user.is_authenticated %}
+	    howdy {{ user.username }}!
+	{% else %}
+	    hey there partner!
+	{% endif %}
 </div>
 <h2>Most Liked Categories</h2>
 <div>
@@ -16,7 +16,7 @@ hey there partner!
 {% for category in categories %}
 <!-- Following line changed to add an HTML hyperlink -->
 <li>
-<a href="/rango/category/{{ category.slug }}">{{ category.name }}</a>
+<a href="{% url 'show_category' category.slug %}">{{ category.name }}</a>
 </li>
 {% endfor %}
 </ul>
@@ -31,7 +31,7 @@ hey there partner!
 {% for page in pages %}
 <!-- Following line changed to add an HTML hyperlink -->
 <li>
-<a href="/rango/category/{{ category.slug }}/{{ page.url }}">{{ page.title }}</a>
+<a href="{{ page.url }}">{{ page.title }}</a>
 </li>
 {% endfor %}
 </ul>
@@ -40,9 +40,6 @@ hey there partner!
 {% endif %}
 </div>
 <div>
-<a href="/rango/about/">About Rango</a><br />
-<a href="/rango/add_category/">Add a New Category</a><br />
 <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
 </div>
-</body>
-</html>
+{% endblock %}
