--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -39,7 +39,9 @@
 <strong>There are no pages present.</strong>
 {% endif %}
 </div>
+
 <div>
 <img src="{% static "images/rango.jpg" %}" alt="Picture of Rango" />
+<p> visits: {{ visits }}</p>
 </div>
 {% endblock %}
